--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="container">
       <header class="site-header">
-        <h1>Instructor Muffin</h1>
+        <h1>Valentine's day</h1>
         <p>Training for beginner kittens</p>
         <img src="img/muffin.png" width="359" height="159" alt="Muffin photo">
       </header>
