--- a/index.html
+++ b/index.html
@@ -9,31 +9,32 @@
     <div class="container">
       <header class="site-header">
         <h1>Valentine's day</h1>
-        <p>Training for beginner kittens</p>
-        <img src="img/muffin.png" width="359" height="159" alt="Muffin photo">
+        <p>An annual holiday celebrated on February 14</p>
+        <img src="img/love-potion.png" width="128" height="128" alt="Love">
       </header>
 
       <section class="features">
-        <h2>Why choose me?</h2>
-        <p class="feature-kitten">I myself was once a kitten. But look at me now.</p>
-        <p class="feature-train">I have got the master fully trained.</p>
-        <p class="feature-cat">I have been a full-time professional cat for more than 5 years now.</p>
+        <h2>Why did Valentine's Day appear?</h2>
+        <p class="feature-kitten">Honoring St. Valentine – A priest who married lovers in secret.</p>
+        <p class="feature-train">Roman Festival – Inspired by Lupercalia, a love celebration.</p>
+        <p class="feature-cat">Medieval Belief – Birds start mating on February 14th.</p>
       </section>
 
       <section class="skills">
-        <h2>What will you learn, you may ask?</h2>
+        <h2>What can you give for Valentine's Day?</h2>
         <ul class="skills-list">
-          <li class="skills-item">How to snatch food from the master’s plate;</li>
-          <li class="skills-item standard">How to give furniture a vintage look;</li>
-          <li class="skills-item standard">How to open the door and not go in;</li>
-          <li class="skills-item vip">How to wake the master up at night;</li>
-          <li class="skills-item vip">How to scatter fur around the apartment.</li>
+          <li class="skills-item">Romantic Dinner – at home or in a restaurant, the key is the atmosphere;</li>
+          <li class="skills-item standard">Personalized Gift – engraved jewelry, a photo book, or a custom phone case;</li>
+          <li class="skills-item standard">Experience Gift – a spa certificate, hot air balloon ride, escape room, or concert tickets;</li>
+          <li class="skills-item vip">Surprise Box – favorite sweets, love notes, and cute little gifts;</li>
+          <li class="skills-item vip">Jewelry or Accessories – a bracelet, watch, perfume, or a stylish wallet</li>
         </ul>
       </section>
       <section class="wishes">
-        <h2>Побажання</h2>
-        <button id = "btn_love_wishes"> Отримати побажання</button>
-        <p id = "love-wishes"> Таємниче побажання</p>
+        <h2>Wish</h2>
+        <button id = "btn_love_wishes"> 
+          Get a wish</button>
+        <p id = "love-wishes"> Mysterious wish</p>
       </section>
 
       <footer class="site-footer">
