--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Valentine's day</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
     <div class="container">
@@ -38,10 +38,10 @@
       </section>
 
       <footer class="site-footer">
-        <p>Valentine's day, 2025</p>
-        <p>I don’t have any contact information, but I can find you myself.</p>
+        <p> id = "btn-buy-hearts">Buy💞</p>
+        <p> id = "count-of-hearts">💘🤍🤍🤍🤍</p>
       </footer>
     </div>
   </body>
-  <script src="script.js"></script>
+  <script src="/Js/script.js"></script>
 </html>
