зробив блок з купівлею

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
       </section>
 
       <footer class="site-footer">
-        <p> id = "btn-buy-hearts">Buy💞</p>
-        <p> id = "count-of-hearts">💘🤍🤍🤍🤍</p>
+        <p id = "btn-buy-hearts">Buy💞</p>
+        <p id = "count-of-hearts">💘🤍🤍🤍🤍</p>
       </footer>
     </div>
   </body>
